# RTHYM-MOC

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHECKLIST.md  CMakeLists.txt  CONTRIBUTING.md  MAINTENANCE.md  MANIFEST.in  README.md  SECURITY.md  build_wasm.sh  hydraulic.js  pyproject.toml  setup.py  transientWorker.js
.binder/: postBuild  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: dvcm_feedback.md
.github/workflows/: tests.yml  verification-notebooks-scheduled.yml  wasm-regression.yml  wheels.yml
bindings/python/: CMakeLists.txt  bindings.cpp
bindings/wasm/: CMakeLists.txt  build_wasm.sh  wasm_bindings.cpp
bindings/wasm/tests/: test_wasm_check_valve.py
docs/: appendix_b_verification.md  appendix_hydraulic_reference.md  benchmarking.md  bergant_adelaide_verification.md  dvcm_baseline_cavitation_note.md  dvcm_comparison.md  dvcm_defect_tracker.md  dvcm_migration.md  dvcm_phase0_baseline.md  dvcm_pr_gate_policy.md  dvcm_roadmap.md  dvcm_timestep_guidance.md  dvcm_web_integration.md  import_fidelity.md  industry_roadmap.md  long_pipeline_phase0_baseline.md  long_pipeline_rthym_migration.md  long_pipeline_surge_roadmap.md  rthym_interior_dvcm_ui_brief.md  test_coverage_matrix.md  transient_friction_verification.md  turbine_transient_scope.md  validation.md  validation_notebook_coverage.md  validation_notebooks.md  valve_closure_spec.md
examples/: _verification_notebook_setup.py  basic_example.py  benchmark_matrix.py  benchmark_ptsnet_vs_tsnet.py  benchmark_vs_tsnet.py  bergant_adelaide_verification.ipynb  cross_engine_surge_verification.ipynb  dvcm_canonical_verification.ipynb  dvcm_physical_verification.ipynb  dvcm_showcase.ipynb  epanet_import_verification.ipynb  gradual_closure_verification.ipynb  load_from_inp.py  long_pipe_valve_verification.ipynb  long_pipeline_surge_verification.ipynb  quickstart_notebook.ipynb  si_quickstart.py  surge_design_rules_verification.ipynb  surge_device_verification.ipynb  test_gradual_closure.py  test_surge_tank.py  test_wave_reflections.py  transient_study_report.py  validation_notebooks_index.ipynb  verify_rthym_webapp.py
rthym_moc/: __init__.py  _rthym_moc.pyi  _version.py  acceptance.py  chainage_air_valve.py  epanet.py  report.py  units.py
scripts/: _install_bergant_trace.py  benchmark_long_pipeline_budget.py  build_verification_notebooks.py  execute_notebook_headless.py  export_tsnet_standpipe_reference.py  open-validation-benchmark-pr.sh  plot_bergant_trace_overlay.py  sanitize_notebooks_for_git.py  validate_bergant_trace_csv.py  verify_dvcm_canonical.py  verify_surge_bundle.py  verify_verification_notebooks.py
src/: bindings.cpp  moc_solver.cpp  moc_solver.hpp  wasm_bindings.cpp
src/solver/: moc_solver.cpp  moc_solver.hpp  types.hpp
tests/: Joukowsky Benchmark.inp  Long Pipe Valve.inp  R-THYM_Joukowsky_Traces.csv  R-THYM_Joukowsky_Verification.json  R-THYM_MOC_Traces.csv  R-THYM_MOC_Verification.json  TSNet_Standpipe_B8_Verification.json  bergant_adelaide_severe_reference.json  bergant_adelaide_severe_valve_trace_reference.csv  bergant_adelaide_verification_utils.py  complex_topology_verification_utils.py  cross_engine_verification_utils.py  dvcm_canonical_verification_utils.py  dvcm_long_run_reference.json  dvcm_physical_verification_utils.py  dvcm_pressure_recovery_reference.json  dvcm_rapid_closure_reference.json  generate_transient_friction_literature_reference.py  gradual_closure_verification_utils.py  js_pythonc_differences.md  long_pipe_valve_verification_utils.py  long_pipeline_perf_baseline.json  long_pipeline_perf_utils.py  long_pipeline_surge_utils.py  long_pipeline_surge_verification_utils.py  surge_design_rules_verification_utils.py  surge_device_verification_utils.py  test_acceptance_checks.py  test_air_valve.py  test_air_valve_compressible.py  test_air_valve_dominant_layout_sensitivity_benchmark.py  test_air_valve_dominant_mixed_layout_benchmark.py  test_air_valve_dominant_size_sweep_benchmark.py  test_boundary_variations_and_losses.py  test_cavitation_model_enum.py  test_chainage_air_valve.py  test_check_valve.py  test_column_separation_and_stability.py  test_complex_topology_from_inp.py  test_courant_interpolation.py  (+66 more)
tests/cpp/: CMakeLists.txt  test_core.cpp
tests/networks/: complex_topology.inp  import_fidelity.inp  pump_valve_benchmark.inp
validation/: README.md
validation/datasets/bergant_adelaide/: README.md  moderate_reference.json  severe_reference.json  severe_valve_trace_reference.csv.example
validation/notebooks/: README.md  _notebook_setup.py  bergant_adelaide_verification.ipynb  grid_scaling_verification.ipynb  validation_notebooks_index.ipynb
