[build-system]
requires = ["setuptools>=64", "pybind11>=2.11", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rthym-moc"
dynamic = ["version"]
description = "High-speed 1-D Method of Characteristics transient hydraulic solver (C++ core, Python API)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]
keywords = ["hydraulics", "waterhammer", "MOC", "transient", "pipe flow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
inp  = [
    "wntr>=0.4,<1.4; python_version < '3.10'",
    "wntr>=0.4; python_version >= '3.10'",
]
dev  = ["pytest", "pytest-cov", "ruff", "mypy", "pre-commit", "numpy", "matplotlib"]
docs = ["sphinx", "numpydoc"]
benchmark = [
    "tsnet==0.3.1",
    "ptsnet==0.1.10",
    "mpi4py",
    "h5py",
    "tqdm",
    "numba",
    "numpy<2",
    "setuptools>=64,<81",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rthym_moc*"]

[tool.setuptools.dynamic]
version = { attr = "rthym_moc._version.__version__" }

[tool.ruff]
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"rthym_moc/epanet.py" = ["E701", "E702"]

[tool.mypy]
python_version = "3.12"
files = ["rthym_moc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
