[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "rthym-moc"
dynamic = ["version"]
description = "High-speed 1-D Method of Characteristics transient hydraulic solver (C++ core, Python API)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]
keywords = ["hydraulics", "waterhammer", "MOC", "transient", "pipe flow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
inp  = [
    # wntr still imports pkg_resources (removed in setuptools>=82)
    "setuptools>=65,<81",
    "wntr>=0.4,<1.4; python_version < '3.10'",
    "wntr>=0.4; python_version >= '3.10'",
]
dev  = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "numpy",
    "matplotlib",
    "setuptools>=65,<81",
]
docs = ["sphinx", "numpydoc"]
benchmark = [
    "tsnet==0.3.1",
    "ptsnet==0.1.10",
    "mpi4py",
    "h5py",
    "tqdm",
    "numba",
    "numpy<2",
    "setuptools<81",
]

[project.urls]
Homepage = "https://github.com/jlillywh/RTHYM-MOC"
Repository = "https://github.com/jlillywh/RTHYM-MOC"
Issues = "https://github.com/jlillywh/RTHYM-MOC/issues"

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["rthym_moc"]
sdist.include = [
    "CMakeLists.txt",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "src",
    "rthym_moc",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "rthym_moc/_version.py"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"rthym_moc/epanet.py" = ["E701", "E702"]

[tool.mypy]
python_version = "3.12"
files = ["rthym_moc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "dvcm: DVCM-focused tests and regression cases",
    "wasm_runtime: requires Emscripten-built WASM artifacts and Node.js",
]
addopts = "-m 'not wasm_runtime'"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "pp* *-musllinux* *-win32 *-manylinux_i686"
test-command = "python -c \"import rthym_moc; solver = rthym_moc.MOCSolver(); print(rthym_moc.__version__)\""

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
